classDiagram

class Scene

class UniformProvider {
  <<abstract>>
  +Apply(shader: Shader&) const
}
class IDrawable {
  <<interface>>
  +Draw(frameUniforms: UniformProvider) const
}
class IInspectable {
  <<interface>>
  +CollectInspectableFields(out, groupPrefix)
  +CollectInspectableNodes(out, nodePrefix)
}

class Camera {
  <<abstract>>
}
class PerspectiveCamera
class BaseMovement {
  <<abstract>>
  +Update(deltaTime, position, front, up)
}

class Light {
  <<abstract>>
}
class GameObject
class Volume {
  <<abstract>>
}

class Mesh
class Material
class Shader
class Geometry {
  <<abstract>>
}
class Texture {
  <<abstract>>
}

class CompositeUniformProvider

%% Root contracts
UniformProvider <|-- Camera
UniformProvider <|-- Light
UniformProvider <|-- Shader
UniformProvider <|-- CompositeUniformProvider
UniformProvider <|-- Scene
UniformProvider <|-- GameObject
UniformProvider <|-- Volume

IDrawable <|-- GameObject
IDrawable <|-- Volume
IInspectable <|-- Scene
IInspectable <|-- Light
IInspectable <|-- GameObject
IInspectable <|-- Shader
IInspectable <|-- Volume

%% Camera branch
Camera <|-- PerspectiveCamera
Camera *-- BaseMovement : moveComponent

%% Scene orchestration roots
Scene *-- Camera : activeCamera
Scene *-- CompositeUniformProvider : frameUniforms
Scene o-- Shader : shaderRegistry
Scene o-- Light : lights[*]
Scene o-- GameObject : gameObjects[*]
Scene o-- Volume : volumes[*]

%% Render path roots
GameObject o-- Mesh : meshes[*]
Mesh o-- Geometry : geometry
Mesh o-- Material : material
Material o-- Shader : shader
Material o-- Texture : diffuseTexture
Material o-- Texture : specularTexture

%% Volume root branch
Volume o-- Shader : shader
Volume o-- Geometry : volumeGeometry